src/LibNotcurses.jl


function ncplane_putwstr(n, gclustarr)
    ccall((:ncplane_putwstr, notcurses), Cint, (Ptr{ncplane}, Ptr{Cwchar_t}), n, gclustarr)
end

function ncplane_pututf32_yx(n, y, x, u)
    ccall((:ncplane_pututf32_yx, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, UInt32), n, y, x, u)
end

function ncplane_putwc_yx(n, y, x, w)
    ccall((:ncplane_putwc_yx, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Cwchar_t), n, y, x, w)
end

function ncplane_putwc(n, w)
    ccall((:ncplane_putwc, notcurses), Cint, (Ptr{ncplane}, Cwchar_t), n, w)
end

function ncplane_putwc_utf32(n, w, wchars)
    ccall((:ncplane_putwc_utf32, notcurses), Cint, (Ptr{ncplane}, Ptr{Cwchar_t}, Ptr{Cuint}), n, w, wchars)
end

function ncplane_putwc_stained(n, w)
    ccall((:ncplane_putwc_stained, notcurses), Cint, (Ptr{ncplane}, Cwchar_t), n, w)
end

function ncplane_puttext(n, y, align, text, bytes)
    ccall((:ncplane_puttext, notcurses), Cint, (Ptr{ncplane}, Cint, ncalign_e, Ptr{Cchar}, Ptr{Csize_t}), n, y, align, text, bytes)
end

function ncplane_hline_interp(n, c, len, c1, c2)
    ccall((:ncplane_hline_interp, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Cuint, UInt64, UInt64), n, c, len, c1, c2)
end

function ncplane_hline(n, c, len)
    ccall((:ncplane_hline, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Cuint), n, c, len)
end

function ncplane_vline_interp(n, c, len, c1, c2)
    ccall((:ncplane_vline_interp, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Cuint, UInt64, UInt64), n, c, len, c1, c2)
end

function ncplane_vline(n, c, len)
    ccall((:ncplane_vline, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Cuint), n, c, len)
end

function ncplane_box(n, ul, ur, ll, lr, hline, vline, ystop, xstop, ctlword)
    ccall((:ncplane_box, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, hline, vline, ystop, xstop, ctlword)
end

function ncplane_box_sized(n, ul, ur, ll, lr, hline, vline, ystop, xstop, ctlword)
    ccall((:ncplane_box_sized, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Cuint, Cuint, Cuint), n, ul, ur, ll, lr, hline, vline, ystop, xstop, ctlword)
end

function ncplane_perimeter(n, ul, ur, ll, lr, hline, vline, ctlword)
    ccall((:ncplane_perimeter, notcurses), Cint, (Ptr{ncplane}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Ptr{nccell}, Cuint), n, ul, ur, ll, lr, hline, vline, ctlword)
end

function ncplane_polyfill_yx(n, y, x, c)
    ccall((:ncplane_polyfill_yx, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Ptr{nccell}), n, y, x, c)
end

function ncplane_gradient(n, y, x, ylen, xlen, egc, styles, ul, ur, ll, lr)
    ccall((:ncplane_gradient, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Cuint, Cuint, Ptr{Cchar}, UInt16, UInt64, UInt64, UInt64, UInt64), n, y, x, ylen, xlen, egc, styles, ul, ur, ll, lr)
end

function ncplane_gradient2x1(n, y, x, ylen, xlen, ul, ur, ll, lr)
    ccall((:ncplane_gradient2x1, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Cuint, Cuint, UInt32, UInt32, UInt32, UInt32), n, y, x, ylen, xlen, ul, ur, ll, lr)
end

function ncplane_format(n, y, x, ylen, xlen, stylemask)
    ccall((:ncplane_format, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Cuint, Cuint, UInt16), n, y, x, ylen, xlen, stylemask)
end

function ncplane_stain(n, y, x, ylen, xlen, ul, ur, ll, lr)
    ccall((:ncplane_stain, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Cuint, Cuint, UInt64, UInt64, UInt64, UInt64), n, y, x, ylen, xlen, ul, ur, ll, lr)
end

function ncplane_mergedown_simple(src, dst)
    ccall((:ncplane_mergedown_simple, notcurses), Cint, (Ptr{ncplane}, Ptr{ncplane}), src, dst)
end

function ncplane_mergedown(src, dst, begsrcy, begsrcx, leny, lenx, dsty, dstx)
    ccall((:ncplane_mergedown, notcurses), Cint, (Ptr{ncplane}, Ptr{ncplane}, Cint, Cint, Cuint, Cuint, Cint, Cint), src, dst, begsrcy, begsrcx, leny, lenx, dsty, dstx)
end

function ncplane_erase(n)
    ccall((:ncplane_erase, notcurses), Cvoid, (Ptr{ncplane},), n)
end

function ncplane_erase_region(n, ystart, xstart, ylen, xlen)
    ccall((:ncplane_erase_region, notcurses), Cint, (Ptr{ncplane}, Cint, Cint, Cint, Cint), n, ystart, xstart, ylen, xlen)
end

function nccell_fg_rgb(cl)
    ccall((:nccell_fg_rgb, notcurses), UInt32, (Ptr{nccell},), cl)
end

function nccell_bg_rgb(cl)
    ccall((:nccell_bg_rgb, notcurses), UInt32, (Ptr{nccell},), cl)
end

function nccell_fg_alpha(cl)
    ccall((:nccell_fg_alpha, notcurses), UInt32, (Ptr{nccell},), cl)
end

function nccell_bg_alpha(cl)
    ccall((:nccell_bg_alpha, notcurses), UInt32, (Ptr{nccell},), cl)
end

function nccell_fg_rgb8(cl, r, g, b)
    ccall((:nccell_fg_rgb8, notcurses), UInt32, (Ptr{nccell}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}), cl, r, g, b)
end

function nccell_bg_rgb8(cl, r, g, b)
    ccall((:nccell_bg_rgb8, notcurses), UInt32, (Ptr{nccell}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}), cl, r, g, b)
end

function nccell_set_fg_rgb8(cl, r, g, b)
    ccall((:nccell_set_fg_rgb8, notcurses), Cint, (Ptr{nccell}, Cuint, Cuint, Cuint), cl, r, g, b)
end

function nccell_set_fg_rgb8_clipped(cl, r, g, b)
    ccall((:nccell_set_fg_rgb8_clipped, notcurses), Cvoid, (Ptr{nccell}, Cint, Cint, Cint), cl, r, g, b)
end

function nccell_set_fg_rgb(c, channel)
    ccall((:nccell_set_fg_rgb, notcurses), Cint, (Ptr{nccell}, UInt32), c, channel)
end

function nccell_set_fg_palindex(cl, idx)
    ccall((:nccell_set_fg_palindex, notcurses), Cint, (Ptr{nccell}, Cuint), cl, idx)
end

function nccell_fg_palindex(cl)
    ccall((:nccell_fg_palindex, notcurses), UInt32, (Ptr{nccell},), cl)
end

function nccell_set_bg_rgb8(cl, r, g, b)
    ccall((:nccell_set_bg_rgb8, notcurses), Cint, (Ptr{nccell}, Cuint, Cuint, Cuint), cl, r, g, b)
end

function nccell_set_bg_rgb8_clipped(cl, r, g, b)
    ccall((:nccell_set_bg_rgb8_clipped, notcurses), Cvoid, (Ptr{nccell}, Cint, Cint, Cint), cl, r, g, b)
end

function nccell_set_bg_rgb(c, channel)
    ccall((:nccell_set_bg_rgb, notcurses), Cint, (Ptr{nccell}, UInt32), c, channel)
end

function nccell_set_bg_palindex(cl, idx)
    ccall((:nccell_set_bg_palindex, notcurses), Cint, (Ptr{nccell}, Cuint), cl, idx)
end

function nccell_bg_palindex(cl)
    ccall((:nccell_bg_palindex, notcurses), UInt32, (Ptr{nccell},), cl)
end

function nccell_fg_default_p(cl)
    ccall((:nccell_fg_default_p, notcurses), Bool, (Ptr{nccell},), cl)
end

function nccell_fg_palindex_p(cl)
    ccall((:nccell_fg_palindex_p, notcurses), Bool, (Ptr{nccell},), cl)
end

function nccell_bg_default_p(cl)
    ccall((:nccell_bg_default_p, notcurses), Bool, (Ptr{nccell},), cl)
end

function nccell_bg_palindex_p(cl)
    ccall((:nccell_bg_palindex_p, notcurses), Bool, (Ptr{nccell},), cl)
end

function ncplane_bchannel(n)
    ccall((:ncplane_bchannel, notcurses), UInt32, (Ptr{ncplane},), n)
end

function ncplane_fchannel(n)
    ccall((:ncplane_fchannel, notcurses), UInt32, (Ptr{ncplane},), n)
end

function ncplane_set_channels(n, channels)
    ccall((:ncplane_set_channels, notcurses), Cvoid, (Ptr{ncplane}, UInt64), n, channels)
end

function ncplane_set_bchannel(n, channel)
    ccall((:ncplane_set_bchannel, notcurses), UInt64, (Ptr{ncplane}, UInt32), n, channel)
end

function ncplane_set_fchannel(n, channel)
    ccall((:ncplane_set_fchannel, notcurses), UInt64, (Ptr{ncplane}, UInt32), n, channel)
end

function ncplane_set_styles(n, stylebits)
    ccall((:ncplane_set_styles, notcurses), Cvoid, (Ptr{ncplane}, Cuint), n, stylebits)
end

function ncplane_on_styles(n, stylebits)
    ccall((:ncplane_on_styles, notcurses), Cvoid, (Ptr{ncplane}, Cuint), n, stylebits)
end

function ncplane_off_styles(n, stylebits)
    ccall((:ncplane_off_styles, notcurses), Cvoid, (Ptr{ncplane}, Cuint), n, stylebits)
end

function ncplane_fg_rgb(n)
    ccall((:ncplane_fg_rgb, notcurses), UInt32, (Ptr{ncplane},), n)
end

function ncplane_bg_rgb(n)
    ccall((:ncplane_bg_rgb, notcurses), UInt32, (Ptr{ncplane},), n)
end

function ncplane_fg_alpha(n)
    ccall((:ncplane_fg_alpha, notcurses), UInt32, (Ptr{ncplane},), n)
end

function ncplane_fg_default_p(n)
    ccall((:ncplane_fg_default_p, notcurses), Bool, (Ptr{ncplane},), n)
end

function ncplane_bg_alpha(n)
    ccall((:ncplane_bg_alpha, notcurses), UInt32, (Ptr{ncplane},), n)
end

function ncplane_bg_default_p(n)
    ccall((:ncplane_bg_default_p, notcurses), Bool, (Ptr{ncplane},), n)
end

function ncplane_fg_rgb8(n, r, g, b)
    ccall((:ncplane_fg_rgb8, notcurses), UInt32, (Ptr{ncplane}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}), n, r, g, b)
end

function ncplane_bg_rgb8(n, r, g, b)
    ccall((:ncplane_bg_rgb8, notcurses), UInt32, (Ptr{ncplane}, Ptr{Cuint}, Ptr{Cuint}, Ptr{Cuint}), n, r, g, b)
end

function ncplane_set_fg_rgb8(n, r, g, b)
    ccall((:ncplane_set_fg_rgb8, notcurses), Cint, (Ptr{ncplane}, Cuint, Cuint, Cuint), n, r, g, b)
end

function ncplane_set_bg_rgb8(n, r, g, b)
    ccall((:ncplane_set_bg_rgb8, notcurses), Cint, (Ptr{ncplane}, Cuint, Cuint, Cuint), n, r, g, b)
end

function ncplane_set_bg_rgb8_clipped(n, r, g, b)
    ccall((:ncplane_set_bg_rgb8_clipped, notcurses), Cvoid, (Ptr{ncplane}, Cint, Cint, Cint), n, r, g, b)
end

function ncplane_set_fg_rgb8_clipped(n, r, g, b)
    ccall((:ncplane_set_fg_rgb8_clipped, notcurses), Cvoid, (Ptr{ncplane}, Cint, Cint, Cint), n, r, g, b)
end

function ncplane_set_fg_rgb(n, channel)
    ccall((:ncplane_set_fg_rgb, notcurses), Cint, (Ptr{ncplane}, UInt32), n, channel)
end

function ncplane_set_bg_rgb(n, channel)
    ccall((:ncplane_set_bg_rgb, notcurses), Cint, (Ptr{ncplane}, UInt32), n, channel)
end

function ncplane_set_fg_default(n)
    ccall((:ncplane_set_fg_default, notcurses), Cvoid, (Ptr{ncplane},), n)
end

function ncplane_set_bg_default(n)
    ccall((:ncplane_set_bg_default, notcurses), Cvoid, (Ptr{ncplane},), n)
end

function ncplane_set_fg_palindex(n, idx)
    ccall((:ncplane_set_fg_palindex, notcurses), Cint, (Ptr{ncplane}, Cuint), n, idx)
end

function ncplane_set_bg_palindex(n, idx)
    ccall((:ncplane_set_bg_palindex, notcurses), Cint, (Ptr{ncplane}, Cuint), n, idx)
end

function ncplane_set_fg_alpha(n, alpha)
    ccall((:ncplane_set_fg_alpha, notcurses), Cint, (Ptr{ncplane}, Cint), n, alpha)
end

function ncplane_set_bg_alpha(n, alpha)
    ccall((:ncplane_set_bg_alpha, notcurses), Cint, (Ptr{ncplane}, Cint), n, alpha)
end

# typedef int ( * fadecb ) ( struct notcurses * nc , struct ncplane * n , const struct timespec * , void * curry )
const fadecb = Ptr{Cvoid}

function ncplane_fadeout(n, ts, fader, curry)
    ccall((:ncplane_fadeout, notcurses), Cint, (Ptr{ncplane}, Ptr{Cvoid}, fadecb, Ptr{Cvoid}), n, ts, fader, curry)
end

function ncplane_fadein(n, ts, fader, curry)
    ccall((:ncplane_fadein, notcurses), Cint, (Ptr{ncplane}, Ptr{Cvoid}, fadecb, Ptr{Cvoid}), n, ts, fader, curry)
end

function ncfadectx_setup(n)
    ccall((:ncfadectx_setup, notcurses), Ptr{ncfadectx}, (Ptr{ncplane},), n)
end

function ncfadectx_iterations(nctx)
    ccall((:ncfadectx_iterations, notcurses), Cint, (Ptr{ncfadectx},), nctx)
end

function ncplane_fadeout_iteration(n, nctx, iter, fader, curry)
    ccall((:ncplane_fadeout_iteration, notcurses), Cint, (Ptr{ncplane}, Ptr{ncfadectx}, Cint, fadecb, Ptr{Cvoid}), n, nctx, iter, fader, curry)
end

function ncplane_fadein_iteration(n, nctx, iter, fader, curry)
    ccall((:ncplane_fadein_iteration, notcurses), Cint, (Ptr{ncplane}, Ptr{ncfadectx}, Cint, fadecb, Ptr{Cvoid}), n, nctx, iter, fader, curry)
end

function ncplane_pulse(n, ts, fader, curry)
    ccall((:ncplane_pulse, notcurses), Cint, (Ptr{ncplane}, Ptr{Cvoid}, fadecb, Ptr{Cvoid}), n, ts, fader, curry)
end

function ncfadectx_free(nctx)
    ccall((:ncfadectx_free, notcurses), Cvoid, (Ptr{ncfadectx},), nctx)
end
